--- a/index.html
+++ b/index.html
@@ -1,233 +1,162 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+---
+layout: default
+title: Secret Siem Reap | Hidden Gems & Curated Cambodia
+description: A long-term local’s editorial guide...
+breadcrumbs: false
+---
 
-  <title>Secret Siem Reap | Hidden Gems & Luxury Guide to Siem Reap, Cambodia</title>
-  <meta name="description" content="An independent editorial guide to hidden bars, quiet temples, luxury hotels, fine dining and curated experiences in Siem Reap, Cambodia." />
-  <meta name="robots" content="noindex, nofollow" />
-  <link rel="canonical" href="https://secretsiemreap.com/" />
-
-  <base id="site-base" href="/" />
-  <script>
-    (function () {
-      var repo = "secretsiemreap.com";
-      var base = "/";
-      if (location.hostname.endsWith("github.io")) base = "/" + repo + "/";
-      document.getElementById("site-base").setAttribute("href", base);
-    })();
-  </script>
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-<a class="skip-link" href="#main">Skip to content</a>
-
-<header class="site-header" id="top">
-  <div class="nav-inner">
-    <nav class="nav" aria-label="Primary">
-
-      <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-panel">
-        <span class="nav-toggle-bars" aria-hidden="true"></span>
-        <span class="sr-only">Menu</span>
-      </button>
-
-      <!-- DESKTOP NAV -->
-      <ul class="top-nav" role="list">
-
-        <li class="nav-item keep-compact">
-          <a class="top-link" href="hidden-gems/">Hidden Gems</a>
-        </li>
-
-        <!-- GUIDE DROPDOWN -->
-        <li class="nav-item has-dropdown keep-compact" data-dropdown="guide">
-          <a class="top-link" href="guide/">Siem Reap Guide</a>
-          <div class="dropdown" aria-label="Siem Reap Guide submenu">
-            <div class="dropdown-inner">
-              <a class="dd-link" href="siem-reap-history/">History</a>
-              <a class="dd-link" href="siem-reap-nature/">Nature</a>
-              <a class="dd-link" href="siem-reap-nature/wildlife/">Wildlife</a>
-              <a class="dd-link" href="siem-reap-food/">Food</a>
-              <a class="dd-link" href="siem-reap-arts/">Arts</a>
-            </div>
-          </div>
-        </li>
-
-        <!-- LUXURY DROPDOWN -->
-        <li class="nav-item has-dropdown" data-dropdown="luxury">
-          <a class="top-link" href="luxury/siem-reap-luxury-guide/">Luxury</a>
-          <div class="dropdown" aria-label="Luxury submenu">
-            <div class="dropdown-inner">
-              <a class="dd-link" href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
-              <a class="dd-link" href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
-              <a class="dd-link" href="luxury/siem-reap-fine-dining/">Fine Dining</a>
-              <a class="dd-link" href="luxury/siem-reap-luxury-spa/">High-End Spa</a>
-              <a class="dd-link" href="luxury/siem-reap-unique-experiences/">Experiences</a>
-            </div>
-          </div>
-        </li>
-
-        <li class="nav-item">
-          <a class="top-link" href="about/">About</a>
-        </li>
-
-      </ul>
-
-      <!-- MOBILE DRAWER -->
-      <div class="nav-panel" id="nav-panel" hidden>
-        <div class="nav-panel-inner">
-          <a class="nav-link" href="hidden-gems/">Hidden Gems</a>
-
-          <a class="nav-link" href="guide/">Siem Reap Guide</a>
-          <a class="nav-link" href="siem-reap-history/">Guide: History</a>
-          <a class="nav-link" href="siem-reap-nature/">Guide: Nature</a>
-          <a class="nav-link" href="siem-reap-nature/wildlife/">Guide: Wildlife</a>
-          <a class="nav-link" href="siem-reap-food/">Guide: Food</a>
-          <a class="nav-link" href="siem-reap-arts/">Guide: Arts</a>
-
-          <a class="nav-link" href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
-          <a class="nav-link" href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
-          <a class="nav-link" href="luxury/siem-reap-fine-dining/">Fine Dining</a>
-          <a class="nav-link" href="luxury/siem-reap-luxury-spa/">High-End Spa</a>
-          <a class="nav-link" href="luxury/siem-reap-unique-experiences/">Experiences</a>
-
-          <a class="nav-link" href="about/">About</a>
-          <a class="nav-link" href="contact/">Contact</a>
-        </div>
-      </div>
-
-    </nav>
+<!-- HERO -->
+<section class="hero" aria-label="Secret Siem Reap hero">
+  <div class="hero-media" aria-hidden="true">
+    <picture class="hero-poster">
+      <source type="image/webp" srcset="{{ '/resources/hero-cinematic-1920.webp' | relative_url }}">
+      <img src="{{ '/resources/hero-cinematic-1920.jpg' | relative_url }}"
+           width="1920" height="1080" alt=""
+           decoding="async" fetchpriority="high" />
+    </picture>
   </div>
-</header>
 
-<div class="page-shell">
-<main id="main">
+  <div class="hero-overlay" aria-hidden="true"></div>
 
-  <!-- HERO -->
-  <section class="hero" aria-label="Siem Reap hero">
-    <div class="hero-media" aria-hidden="true">
-      <picture class="hero-poster">
-        <source type="image/webp" srcset="resources/hero-cinematic-1920.webp">
-        <img src="resources/hero-cinematic-1920.jpg" width="1920" height="1080" alt="" decoding="async" fetchpriority="high"/>
-      </picture>
-    </div>
+  <div class="hero-timed">
+    <div class="hero-timed-inner">
+      <div class="timed-line timed-1 is-on">The quieter side of Siem Reap.</div>
+      <div class="timed-line timed-2 is-on">Hidden bars, calm courtyards, and places worth returning to.</div>
 
-    <div class="hero-overlay" aria-hidden="true"></div>
-
-    <div class="hero-timed">
-      <div class="hero-timed-inner">
-        <div class="timed-line timed-1 is-on">New discoveries?</div>
-        <div class="timed-line timed-2 is-on">In Siem Reap, they’re everywhere…</div>
-
-        <div class="timed-cta is-on">
-          <div class="timed-kicker">START HERE:</div>
-          <a class="btn btn-outline" href="hidden-gems/">EXPLORE HIDDEN GEMS</a>
-        </div>
+      <div class="timed-cta is-on">
+        <div class="timed-kicker">START WITH THE HUB:</div>
+        <a class="btn btn-outline" href="{{ '/hidden-gems-guide/siem-reap/' | relative_url }}">EXPLORE HIDDEN GEMS</a>
       </div>
     </div>
-  </section>
-
-  <!-- INTRO SECTION -->
-  <section class="paper" aria-label="Secret Siem Reap overview">
-    <div class="paper-inner">
-      <h1 class="paper-title">The quieter side of Siem Reap</h1>
-
-      <p class="paper-lede">
-        An independent editorial guide to hidden bars, calm temples, atmosphere-led dining and quietly exceptional stays.
-        We focus on places that protect their character.
-      </p>
-
-      <div class="paper-grid paper-grid--3">
-
-        <div class="paper-card">
-          <h2 class="paper-h">Quiet routes & temples</h2>
-          <p class="paper-p">
-            Sunrise without the crush. Lesser-known temples. Timing that restores calm to Angkor.
-          </p>
-        </div>
-
-        <div class="paper-card">
-          <h2 class="paper-h">Food with atmosphere</h2>
-          <p class="paper-p">
-            Restaurants chosen for feeling, not algorithms — places worth returning to.
-          </p>
-        </div>
-
-        <div class="paper-card">
-          <h2 class="paper-h">Reservation-first nights</h2>
-          <p class="paper-p">
-            Courtyards, private bars, and discreet spaces that prioritise experience over volume.
-          </p>
-        </div>
-
-      </div>
-
-      <div class="paper-actions">
-        <a class="btn btn-dark" href="hidden-gems/">Open the Hidden Gems guide</a>
-        <a class="btn btn-ghost" href="guide/">Read the Siem Reap Guide</a>
-      </div>
-
-    </div>
-  </section>
-
-</main>
-</div>
-
-<footer class="site-footer">
-  <div class="footer-inner">
-
-    <div class="footer-intro">
-      <p>
-        Secret Siem Reap is an independent editorial publication covering hidden bars,
-        luxury hotels and atmosphere-led travel in Siem Reap, Cambodia.
-      </p>
-    </div>
-
-    <nav class="footer-grid">
-
-      <div class="footer-col">
-        <h3>Hidden Gems</h3>
-        <a href="hidden-gems/">Guide</a>
-        <a href="hidden-gems/hidden-bars/">Hidden Bars</a>
-        <a href="hidden-gems/quiet-places/">Quiet Places</a>
-      </div>
-
-      <div class="footer-col">
-        <h3>Guide</h3>
-        <a href="siem-reap-history/">History</a>
-        <a href="siem-reap-nature/">Nature</a>
-        <a href="siem-reap-nature/wildlife/">Wildlife</a>
-        <a href="siem-reap-food/">Food</a>
-        <a href="siem-reap-arts/">Arts</a>
-      </div>
-
-      <div class="footer-col">
-        <h3>Luxury</h3>
-        <a href="luxury/siem-reap-luxury-guide/">Luxury Guide</a>
-        <a href="luxury/siem-reap-deluxe-hotels/">Deluxe Hotels</a>
-      </div>
-
-      <div class="footer-col">
-        <h3>Practical</h3>
-        <a href="contact/">Contact</a>
-        <a href="editorial-policy/">Editorial Policy</a>
-        <a href="privacy/">Privacy Policy</a>
-      </div>
-
-    </nav>
-
-    <div class="footer-bottom">
-      <p>© <span id="year"></span> Secret Siem Reap</p>
-    </div>
-
   </div>
-</footer>
+</section>
 
-<script src="main.js" defer></script>
-</body>
-</html>
+<!-- INTRO -->
+<section class="paper" aria-label="About Secret Siem Reap">
+  <div class="paper-inner">
+    <p class="timed-kicker">EDITORIAL GUIDE</p>
+    <h1 class="paper-title">Secret Siem Reap: Curated Cambodia</h1>
+
+    <p class="paper-lede">
+      This site is written from the perspective of someone who has lived here a long time.
+      It’s not a list of “top things to do.” It’s a map of atmosphere—where to go when you want something quieter,
+      better designed, more local, or simply more memorable.
+    </p>
+
+    <div class="paper-actions" role="group" aria-label="Primary actions">
+      <a class="btn btn-dark" href="{{ '/hidden-gems-guide/siem-reap/' | relative_url }}">Hidden Gems Hub</a>
+      <a class="btn btn-ghost" href="{{ '/cambodian-food/' | relative_url }}">Cambodian Food Pillar</a>
+    </div>
+  </div>
+</section>
+
+<!-- EXPLORE BY CLUSTER -->
+<section class="paper" aria-label="Explore the Siem Reap clusters">
+  <div class="paper-inner">
+    <h2 class="paper-h">Explore by mood</h2>
+    <p class="paper-p">
+      Start with the hub if you’re new, or jump into a cluster based on what you’re chasing today.
+    </p>
+
+    <div class="paper-grid paper-grid--2" role="list">
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Hidden Bars</h3>
+        <p class="paper-p">Low-lit cocktail rooms, no-signage doors, and reservation-first nights.</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/hidden-bars/' | relative_url }}">Hidden bars in Siem Reap</a>
+      </div>
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Hidden Restaurants</h3>
+        <p class="paper-p">Chef-led dining, refined Khmer flavour, calm gardens away from the loud strip.</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/hidden-restaurants/' | relative_url }}">Hidden restaurants in Siem Reap</a>
+      </div>
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Boutique Hotels</h3>
+        <p class="paper-p">Courtyards, quiet design, staff who remember you, and sleep that resets you.</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/boutique-hotels/' | relative_url }}">Boutique hotels in Siem Reap</a>
+      </div>
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Date Spots</h3>
+        <p class="paper-p">Golden hour lanes, slow dinners, and the right last drink (not the loud one).</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/date-spots/' | relative_url }}">Best date spots in Siem Reap</a>
+      </div>
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Cute Local Coffee</h3>
+        <p class="paper-p">Neighbourhood cafés, roasters, and the morning ritual culture locals keep.</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/cute-local-coffee/' | relative_url }}">Cute local coffee shops</a>
+      </div>
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Cultural Experiences</h3>
+        <p class="paper-p">Studios, workshops, rehearsals, and experiences built for connection.</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/cultural-experiences/' | relative_url }}">Hidden cultural experiences</a>
+      </div>
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Shopping & Artisans</h3>
+        <p class="paper-p">Buy fewer things, buy better things—textiles, ceramics, design-led finds.</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/shopping-artisans/' | relative_url }}">Hidden shopping & artisans</a>
+      </div>
+
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Luxury Experiences</h3>
+        <p class="paper-p">The quiet kind of luxury: access, timing, calm, and effortless planning.</p>
+        <a class="text-link" href="{{ '/hidden-gems-guide/siem-reap/luxury-experiences/' | relative_url }}">Luxury experiences in Siem Reap</a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CAMBODIAN FOOD KNOWLEDGE LAYER -->
+<section class="paper" aria-label="Cambodian food pillar">
+  <div class="paper-inner">
+    <h2 class="paper-h">Cambodian food, explained properly</h2>
+    <p class="paper-p">
+      A lot of Cambodia is best understood through food. We keep a readable knowledge layer—dishes and ingredients—
+      so you can learn the context once, then return to it when you’re choosing where to eat.
+    </p>
+
+    <div class="paper-grid paper-grid--3" role="list">
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Prahok</h3>
+        <p class="paper-p">Fermented fish paste—central to Khmer flavour depth.</p>
+        <a class="text-link" href="{{ '/cambodian-food/prahok/' | relative_url }}">Read: Prahok</a>
+      </div>
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Kampot Pepper</h3>
+        <p class="paper-p">Aromatics, terroir, and why serious kitchens love it.</p>
+        <a class="text-link" href="{{ '/cambodian-food/kampot-pepper/' | relative_url }}">Read: Kampot pepper</a>
+      </div>
+      <div class="paper-card" role="listitem">
+        <h3 class="paper-sh">Fish Amok</h3>
+        <p class="paper-p">What “good” amok tastes like—and how it varies.</p>
+        <a class="text-link" href="{{ '/cambodian-food/fish-amok/' | relative_url }}">Read: Fish amok</a>
+      </div>
+    </div>
+
+    <div class="paper-actions">
+      <a class="btn btn-outline" href="{{ '/cambodian-food/' | relative_url }}">Explore Cambodian food</a>
+      <a class="btn btn-ghost" href="{{ '/hidden-gems-guide/siem-reap/hidden-restaurants/' | relative_url }}">Where to try the best dishes</a>
+    </div>
+  </div>
+</section>
+
+<!-- CTA -->
+<section class="paper" aria-label="Start here CTA">
+  <div class="paper-inner">
+    <h2 class="paper-h">If you only do one thing</h2>
+    <p class="paper-p">
+      Start with the hub. It’s designed to funnel you into the right page based on what you care about—bars, food, romance,
+      culture, shopping, luxury, or stays.
+    </p>
+    <div class="paper-actions">
+      <a class="btn btn-dark" href="{{ '/hidden-gems-guide/siem-reap/' | relative_url }}">Open the Hidden Gems Hub</a>
+      <a class="btn btn-ghost" href="{{ '/guide/' | relative_url }}">Read the Siem Reap Guide</a>
+    </div>
+  </div>
+</section>
